delete request userId
