# docs/swagger.yaml
@@ -551,7 +551,8 @@ paths:
     get:
       consumes:
       - application/json
-      description: get all description by dep id from query requires secretary access
+      description: get all requests with send status by dep id from query requires
+        secretary access
       parameters:
       - description: department id
         in: query
@@ -671,6 +672,53 @@ paths:
       - Bearer: []
       - Token: []
       summary: GenerateDocumentFromRequest
+      tags:
+      - requests
+  /requests/history-by-department-id:
+    get:
+      consumes:
+      - application/json
+      description: get all requests with done status by dep id from query requires
+        secretary access
+      parameters:
+      - description: department id
+        in: query
+        name: depId
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/reqmodel.RequestViewDTO'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/amiderrors.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/amiderrors.ErrorResponse'
+        "403":
+          description: Forbidden
+          schema:
+            $ref: '#/definitions/amiderrors.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/amiderrors.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/amiderrors.ErrorResponse'
+      security:
+      - Bearer: []
+      - Token: []
+      summary: HistoryDepartentRequests
       tags:
       - requests
   /requests/my-requests:
